# cdo

./: .gitignore  CMakeLists.txt  PLAN.md  README.md  archive.c.gcov  bootstrap.cmd  bootstrap.ps1  build.ps1  cdo.toml  project.cdo.json  stdio.h.gcov  test_stdout.txt
.cdo/: activate.ps1
.kiro/specs/build-pipeline-refactor/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/cache-performance-improvements/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/catalog-system/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/cdo-e2e-framework/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/cdo-enhancements/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/cdo-implementation/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/cdo-install/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/cdo-source-restructure/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/cdo-test-framework/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/crate-modules/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/multi-module-crates/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/parallel-dag/: design.md  requirements.md  tasks.md
.kiro/specs/remote-packages/: design.md  requirements.md  tasks.md
.kiro/steering/: build-instructions.md  dev-rules.md
catalogs/: packages.toml  tools.toml
cmake/: cdo_deps.cmake
crates/cdo/: crate.toml
crates/cdo/api/commands/: build_lock.h  bundle.h  cmd_build.h  cmd_cache.h  cmd_catalog.h  cmd_clean.h  cmd_deps.h  cmd_doctor.h  cmd_e2e.h  cmd_fmt.h  cmd_hook.h  cmd_install.h  cmd_new.h  cmd_run.h  cmd_test.h  cmd_tool.h  test_coverage.h  test_protocol.h  test_renderer.h
crates/cdo/api/commons/: archive.h  checksum.h  output.h  semver.h  toml.h
crates/cdo/api/core/: cache.h  cache_fastpath.h  cache_hash_parallel.h  cache_log.h  cache_threshold.h  catalog.h  cli.h  cli_arg_access.h  compiler.h  dag_scheduler.h  handler_ctx.h  hooks_exec.h  json.h  log.h  module.h  mtime_index.h  output.h  registry_setup.h  registry_subcmds.h  shader.h  template.h  workspace.h
crates/cdo/api/model/: cache_config.h  dag.h  deps.h  fmt_settings.h  hooks.h  module.h  scanner.h  workspace.h
crates/cdo/api/pal/: pal.h
crates/cdo/e2e/: test_build_pipeline.c  test_cdo_basic.c  test_cdo_e2e_cmd.c
crates/cdo/exe/: main.cpp
crates/cdo/lib/commands/: build_lock.c  bundle.c  cmd_build.c  cmd_build_deps.c  cmd_build_dyn.c  cmd_build_e2e.c  cmd_build_exe.c  cmd_build_internal.h  cmd_build_legacy.c  cmd_build_lib.c  cmd_build_res.c  cmd_build_shd.c  cmd_build_test.c  cmd_build_util.c  cmd_cache.c  cmd_catalog.c  cmd_clean.c  cmd_deps.c  cmd_deps_add.c  cmd_deps_internal.h  cmd_deps_remove.c  cmd_doctor.c  cmd_e2e.c  cmd_fmt.c  cmd_hook.c  cmd_install.c  cmd_install_internal.h  cmd_install_manifest.c  cmd_new.c  cmd_run.c  cmd_run_internal.h  cmd_test.c  cmd_tool.c  test_coverage.c  test_protocol.c  test_renderer.c
crates/cdo/lib/commons/: archive.c  checksum.c  http.c  json.c  semver.c  threadpool.c  toml_parse.c  toml_serialize.c
crates/cdo/lib/core/: archive.c  cache.c  cache_fastpath.c  cache_hash_parallel.c  cache_key.c  cache_log.c  cli.c  (+37 more)
crates/cdo_cli/: crate.toml
crates/cdo_cli/api/: cli_errors.h
crates/cdo_cli/tst/: test_cmd_complete.c  test_cmd_help.c  test_cmd_parse.c  test_cmd_register.c  test_cmd_validate.c  test_integration.c  test_out_dynamic.c  test_out_icon.c  test_out_styled.c  test_term_ansi.c  test_term_detect.c
crates/cdo_e2e/: crate.toml
crates/cdo_e2e/api/: cdo_e2e.h
crates/cdo_e2e/tst/: test_e2e_assert.c  test_e2e_env.c  test_e2e_fixture.c  test_e2e_spawn.c
crates/cdo_pbt/: crate.toml
crates/cdo_pbt/src/: test_main.c
crates/cdo_ut/: crate.toml
crates/cdo_ut/api/: cdo_ut.h
crates/cdo_ut/lib/: cdo_ut_capture.c  cdo_ut_capture.h  cdo_ut_filter.c  cdo_ut_filter.h  cdo_ut_main.c  cdo_ut_parallel.c  cdo_ut_parallel.h  cdo_ut_protocol.c  cdo_ut_protocol.h
crates/cdo_ut/tst/: test_cdo_ut.c
e2e/install_basic/: cdo.toml
e2e/parallel_dag/: cdo.toml
src/cdo/: main.cpp
src/cdo/commands/: cmd_build.c  cmd_build.h  cmd_deps.c  cmd_deps.h  cmd_new.c  cmd_run.c  cmd_shader.c  cmd_test.h  cmd_tool.c  cmd_tool.h
src/cdo/core/: cli.h  compiler.c  deps.h  errors.c  errors.h  json.c  output.c  scanner.c  scanner.h  shader.h  threadpool.h  workspace.c  workspace.h
src/cdo/pal/: pal.h  pal_fs.c  pal_process.c
tests/: test_harness.h  test_main.c
tests/unit/: test_catalog.c  test_checksum.c  test_cli.c  test_scanner.c
(+159 files in other folders)
